Fixed some things in the codegeneration. Now it compiles.
We have a makefile do build but not clean.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
 .*
+*.bak
+depend
+sunc
+sunc.config
+sunc.creator
+sunc.creator.user
+sunc.files
+sunc.includes
+
 # Compiled Object files
 *.slo
 *.lo
