Make two threads. One for OpenGL the other for handling the incoming events. Event processing is still not there.

--- a/Thread/Makefile
+++ b/Thread/Makefile
@@ -8,10 +8,12 @@
 PROJ=thread
 
 SRC=\
-    CApplication.cpp
+    CApplication.cpp\
+    CThread.cpp
 
 OBJ=\
-    CApplication.o
+    CApplication.o\
+    CThread.o
 
 CXXFLAGS+=-std=gnu++0x -fPIC -g
 
